Implemented GPIO commands
